# mc-phone

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  flake.nix
migrations/: 20250720175456_users.down.sql  20250720175456_users.up.sql  20250720175543_permissions.down.sql  20250720175543_permissions.up.sql
requests-collection/mc-phone/: bruno.json  call-rcon-command.bru  collection.bru  create-user.bru  grant-permission.bru  login admin.bru  login.bru  logout.bru
src/: error.rs  lib.rs  main.rs  password.rs  rcon.rs  user.rs  web_server.rs
