[package]
name = "mc-phone"
version = "0.1.0"
edition = "2024"

[dependencies]
snafu = "0.8.6"
hyper = { version = "1", features = ["http1", "server"] }
tokio = { version = "1", features = ["rt", "net", "macros", "rt-multi-thread" ] }
# tokio = { version = "1", features = ["full" ] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1"
serde = { version = "1", features = ["derive"]}
serde_json = "1.0"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
jwt = "0.16.0"
sha2 = "0.10.9"
hmac = "0.12.1"
actix-web = "4.11.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-identity = "0.8.0"
argon2 = "0.5.3"
clap = { version = "4.5.41", features = ["derive", "env"] }
env_logger = "0.11.8"
